--- a/wit-gui/build.gradle
+++ b/wit-gui/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'application'
+	id 'org.openjfx.javafxplugin' version '0.0.9'
 	id 'org.beryx.jlink' version '2.12.0'
 }
 
@@ -11,6 +12,12 @@ dependencies {
 	testImplementation(platform('org.junit:junit-bom:5.7.0'))
 	testImplementation('org.junit.jupiter:junit-jupiter')
 }
+
+javafx {
+	version = "15.0.1"
+	modules = ['javafx.controls']
+}
+
 
 test {
 	useJUnitPlatform()
