config: allows stdout during testing

--- a/wit-core/build.gradle
+++ b/wit-core/build.gradle
@@ -14,6 +14,7 @@ dependencies {
 test {
 	useJUnitPlatform()
 	testLogging {
+		showStandardStreams = true
 		events "passed", "skipped", "failed"
 	}
 }
