--- a/wit-gui/build.gradle
+++ b/wit-gui/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'application'
 	id 'org.openjfx.javafxplugin' version '0.0.9'
 	id 'org.beryx.jlink' version '2.12.0'
+    id "com.scuilion.syntastic" version "0.3.8"
 }
 
 repositories {
@@ -22,7 +23,9 @@ javafx {
 test {
 	useJUnitPlatform()
 	testLogging {
+		showStandardStreams = true
 		events "passed", "skipped", "failed"
+		exceptionFormat = 'full'
 	}
 }
 
