--- a/wit-gui/build.gradle
+++ b/wit-gui/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
 	testImplementation(platform('org.junit:junit-bom:5.7.0'))
 	testImplementation('org.junit.jupiter:junit-jupiter')
+	compile project(':wit-core')
 }
 
 javafx {
