adds characters to configuration

--- a/wit-core/src/main/resources/dev/joshpetit/wit/core/base/defaultConfig.properties
+++ b/wit-core/src/main/resources/dev/joshpetit/wit/core/base/defaultConfig.properties
@@ -25,6 +25,27 @@
 49=2yY
 94=2zZ
 
+# Numbers
+00=211
+11=222
+22=233
+33=244
+44=255
+55=266
+66=277
+77=288
+88=299
+99=200
+
+# White Spaces
+12=2\ \ 
+13=2\t \t
+14=2\n \n
+
+# Quotes
+23=2''
+24=2""
+
 # Delete Commands
 # Del Char
 56=10 
