--- a/wit-core/src/test/resources/dev/joshpetit/wit/core/base/defaultConfig.properties
+++ b/wit-core/src/test/resources/dev/joshpetit/wit/core/base/defaultConfig.properties
@@ -15,12 +15,44 @@
 29=2oO
 35=2pP
 36=2qQ
-37=2qR
-38=2qS
-39=2qT
+37=2rR
+38=2sS
+39=2tT
 45=2uU
 46=2vV
 47=2wW
 48=2xX
 49=2yY
 94=2zZ
+
+# Numbers
+00=211
+11=222
+22=233
+33=244
+44=255
+55=266
+66=277
+77=288
+88=299
+99=200
+
+# White Spaces
+12=2\ \ 
+13=2\t \t
+14=2\n \n
+
+# Quotes
+23=2''
+24=2""
+
+# Delete Commands
+# Del Char
+56=10 
+
+# Del Word
+57=11
+
+# Message Commands
+# Capslock
+95=00
