Adds multiple operations to completions

--- a/wit-core/src/test/resources/dev/joshpetit/wit/core/base/defaultConfig.properties
+++ b/wit-core/src/test/resources/dev/joshpetit/wit/core/base/defaultConfig.properties
@@ -1,7 +1,7 @@
 05=2aA
 06=2bB
 07=2cC
-08=2dD
+08=2dD 
 09=2eE
 15=2fF
 16=2gG
@@ -49,11 +49,14 @@
 
 # Delete Commands
 # Del Char
-56=10 
+75=10 
 
 # Del Word
-57=11
+76=11
 
 # Message Commands
 # Capslock
 65=00
+
+# Shift
+67=01
